tests/sksl/errors/OpaqueTypeInInterfaceBlock.glsl
### Compilation failed:

error: 1: variables of type 'sampler' must be global
Bad { sampler x; };
      ^^^^^^^^^^
1 error
